Fix ui on mobile

--- a/cv/assets/css/style.scss
+++ b/cv/assets/css/style.scss
@@ -77,7 +77,7 @@ header {
   }
 
   @media (min-width: 768px) {
-    .avatart {
+    .avatar {
       width: 250px;
     }
 
@@ -107,14 +107,14 @@ header {
 .projects {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -5px;
-  margin-right: -5px;
+  margin-left: -8px;
+  margin-right: -8px;
 
   .item {
-    width: 25%;
+    width: 50%;
 
     .inner {
-      padding: 5px;
+      padding: 8px;
     }
 
     a {
@@ -135,6 +135,12 @@ header {
       margin: 0;
       padding: 10px 16px;
       font-weight: normal
+    }
+  }
+
+  @media (min-width: 768px) {
+    .item {
+      width: 25%;
     }
   }
 }
